# loan_amort

./: LICENSE  README.md  amortization_schedule.xlsx  cli.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
loan_amort/: amort.py  cli.py  metrics.py  plots.py
loan_amort.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_amort.py  test_cli.py  test_metrics.py  test_plots.py
